# CMakeBundleUtilitiesExample

./: CMakeLists.txt  README.md
CMake/: BundleUtilitiesWithRPath.cmake  MyCPack.cmake  MyCPackBundleFixup.cmake.in
MyApp/: CMakeLists.txt
MyLib/: CMakeLists.txt  MyLib.cpp  MyLib.h
MyLib4Plugin/: CMakeLists.txt  MyLib4Plugin.cpp  MyLib4Plugin.h
MyOtherApp/: CMakeLists.txt  MyOtherApp.cpp
MyPlugin/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h
