project(MyLib4Plugin)

add_library(${PROJECT_NAME} SHARED ${PROJECT_NAME}.cpp ${PROJECT_NAME}.h)

set_target_properties(${PROJECT_NAME} PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${${PROJECT_NAME}_LIB_DIR}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${${PROJECT_NAME}_LIB_DIR}"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${${PROJECT_NAME}_LIB_DIR}"
  )

install(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION ${PROJECT_INSTALL_ROOT}${${PROJECT_NAME}_LIB_DIR} COMPONENT RuntimeLibraries
  LIBRARY DESTINATION ${PROJECT_INSTALL_ROOT}${${PROJECT_NAME}_LIB_DIR} COMPONENT RuntimeLibraries
  ARCHIVE DESTINATION ${PROJECT_INSTALL_ROOT}${${PROJECT_NAME}_LIB_DIR} COMPONENT Development
  )
